WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162795
URLParser: parsing a URL with an empty host and a colon should fail
https://bugs.webkit.org/show_bug.cgi?id=162795
Summary
URLParser: parsing a URL with an empty host and a colon should fail
Alex Christensen
Reported
2016-09-30 11:06:16 PDT
URLParser: parsing a URL with an empty host and a colon should fail
Attachments
Patch
(4.50 KB, patch)
2016-09-30 11:06 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-30 11:06:45 PDT
Created
attachment 290351
[details]
Patch
WebKit Commit Bot
Comment 2
2016-09-30 11:08:58 PDT
Attachment 290351
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3
2016-09-30 11:09:12 PDT
Comment on
attachment 290351
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=290351&action=review
> Source/WebCore/ChangeLog:8 > + No new tests (OOPS!).
Covered by new API tests.
Alex Christensen
Comment 4
2016-09-30 11:51:05 PDT
http://trac.webkit.org/changeset/206649
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug