URLParser: parsing a URL with an empty host and a colon should fail https://bugs.webkit.org/show_bug.cgi?id=162795

Reviewed by Tim Horton.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parseHostAndPort):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206649 268f45cc-cd09-0410-ab3c-d52691b4dbfc